# roker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  calculate.js  calculate_indoor_rh.js  calculate_rh.js  calculator.cpp  calculator.h  conaninfo.txt  conanmanifest.txt  main.cpp  main.js  mainwindow.cpp  mainwindow.h  mainwindow.ui  package-lock.json  package.json  units_example.cpp
include/units/physical/si/derived/: momentum.h
lib/: index.js  index.mjs  logger.js  logger.mjs  number.mjs  p2.js  p2.mjs  physics.js  physics.mjs  rhcalc.js  rhcalc.mjs  rhconvert.js  system.mjs  units.js  units.mjs  units2.mjs
lib/cmake/mp-units/: mp-unitsConfigVersion.cmake  mp-unitsTargets.cmake
test/: index.js  index.mjs  physics.js  physics.mjs  rhcalc.js  rhcalc.mjs  units.js  units.mjs  units2.mjs
webapp/: package-lock.json  package.json
webapp/public/: index.html
webapp/src/: App.svelte  Enthalpy.svelte  FormatInput.svelte  Humidity.svelte  ParamForm.svelte  Params.svelte  Pressure.svelte  Temp.svelte  Temperature.svelte  main.js
